--- a/bkquiz-web/package.json
+++ b/bkquiz-web/package.json
@@ -50,6 +50,7 @@
     "js-yaml": "^4.1.1",
     "jszip": "^3.10.1",
     "katex": "^0.16.27",
+    "nanoid": "^5.1.6",
     "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.5.8",
