--- a/bkquiz-web/package.json
+++ b/bkquiz-web/package.json
@@ -42,7 +42,7 @@
     "@clerk/nextjs": "^6.35.6",
     "@hookform/resolvers": "^5.2.2",
     "@logtape/logtape": "^1.2.2",
-    "@prisma/client": "^6.19.1",
+    "@prisma/client": "7.2.0",
     "@sentry/nextjs": "^10.28.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "drizzle-orm": "^0.44.7",
