chore: security audit before making repo public
- Review .gitignore to ensure sensitive files are excluded
- Verify no hardcoded secrets in codebase
- Check docker-compose.yml for default dev credentials (safe for public)
- Review config files for environment variable usage
- All secrets properly use environment variables
- No .env files committed
- Ready for public repository

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: bkquiz-postgres
     restart: unless-stopped
     environment:
+      # Dev credentials only - use environment variables in production
       POSTGRES_DB: bkquiz
       POSTGRES_USER: bkquiz
       POSTGRES_PASSWORD: bkquiz
