chore: update package.json name and author to BKquiz
- Change package name from next-js-boilerplate to bkquiz-web
- Update author from Ixartz to TrungTV
- Update security audit doc with checkly.config.ts status

--- a/bkquiz-web/package.json
+++ b/bkquiz-web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-js-boilerplate",
-  "author": "Ixartz (https://github.com/ixartz)",
+  "name": "bkquiz-web",
+  "author": "TrungTV (https://github.com/trungtv)",
   "engines": {
     "node": ">=20"
   },
