fix: sửa tất cả lỗi TypeScript và linting để build được trên Vercel
- Fix devRole type errors (cast to correct type)
- Fix null check errors (add null guards)
- Remove unused @ts-expect-error directives
- Fix missing Prisma fields (id, updatedAt) trong create operations
- Fix unused imports/variables
- Add react-katex type declaration
- Fix React effect warning trong GoogleSignInButton (compute error trong render thay vì effect)
- Fix ternary expression formatting
- Add test:build script và TEST_BUILD_VERCEL.md docs

--- a/bkquiz-web/package.json
+++ b/bkquiz-web/package.json
@@ -11,6 +11,8 @@
     "build:next": "next build --webpack",
     "build-local": "run-p db-server:memory build:next --race",
     "build": "run-s prisma:generate build:next",
+    "build:vercel": "npm ci && npm run prisma:generate && npm run build:next",
+    "test:build": "npm run check:types && npm run build",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "clean": "rimraf .next out coverage",
